fixed spacing

--- a/css_layout_3/css/style.css
+++ b/css_layout_3/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	background-color: blue;
+	background-color: white;
 	margin: 0;
 	padding: 0;
 }
@@ -12,20 +12,66 @@ body {
 body * {
 	background-color: rgb(192, 192, 192);
 	border: 1px solid black;
+	box-sizing: border-box;
 }
 
 header, footer {
-	height: 20vh;
+	height: 18vh;
+	padding: 1vh 1vw;
+	margin-bottom: 0.5vh;
+	margin-top: 0.5vh;
+	margin-right: 1vw;
+	margin-left: 1vw;
+}
+
+.group1 {
+	
+	width: 100%;
+	background: none;
 }
 
 .big1, .big2 {
-	height: 35vh;
-	width: 48vw;
+	height: 30vh;
+	width: 47vw;
 	display: inline-block;
+	padding: 1vw 1vh;
+	margin-left: 1vw;
+	margin-right: 1vw;
+	margin-top: 1vh;
+	margin-bottom: 0.5vh;
 }
 
 .left, .center, .right {
-	height: 25vh;
+	height: 20vh;
 	width: 30vw;
 	display: inline-block;
+	padding: 1vh 1vw;
+	margin: 1vh 1.3vw;
+	/*padding: 1%;
+	margin-bottom: 0.5%
+	margin-left: 1%;
+	margin-right: 1%;*/
 }
+
+.big1 {
+	margin-right: 1.6vw;
+}
+
+.big2 {
+	margin-left: 1.6vw;
+}
+
+.left, .center {
+	margin-right: 1.6vw;
+}
+
+.right, .center{
+	margin-left: 1.vw;
+}
+
+
+/*.big2, .right {
+	margin-right: 0;
+	padding-right: 0;
+}
+
